--- a/comparison/easy-segmenter-bench/Cargo.toml
+++ b/comparison/easy-segmenter-bench/Cargo.toml
@@ -1,18 +1,14 @@
 [package]
-name = "easy-segmenter"
+name = "easy-segmenter-bench"
 version = "0.1.0"
 edition = "2021"
+default-run = "easy-segmenter-bench"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aho-corasick = "0.7"
-regex = "1"
+easy-segmenter = { path = "../.." }
 
-[workspace]
-members = [
-    "bench",
-]
-exclude = [
-    "comparison",
-]
+[[bin]]
+name = "dump"
+path = "src/dump.rs"
