Add a new GitHub Actions workflow to automate formatting TOML files (#25)
* add ci for format

* add last break line

* rm main running

* minor

* add linter

* rm

* Update .github/workflows/rust.yml

Co-authored-by: Tetsuo Kiso <tetsuok@users.noreply.github.com>

* add end line

Co-authored-by: Tetsuo Kiso <tetsuok@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,3 +55,12 @@ jobs:
         with:
           command: doc
           args: --no-deps
+
+  lint-toml:
+    name: Check TOML format
+    runs-on: ubuntu-latest
+    container: tamasfe/taplo:0.7.0
+    steps:
+      - uses: actions/checkout@v3
+      - name: lint
+        run: taplo fmt --check
