--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 [dependencies]
 aho-corasick = "0.7"
 regex = "1"
+serde = "=1.0.145"
+serde_derive = "=1.0.145"
+toml = "=0.5.9"
 
 [workspace]
 members = ["bench"]
